// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query 1`] = `
Array [
  Object {
    "调": 1,
    "释": "",
    "音": "tʂoŋ",
  },
  Object {
    "调": 4,
    "释": "",
    "音": "tʂoŋ",
  },
]
`;

exports[`query 2`] = `
Array [
  Object {
    "调": 3,
    "释": "",
    "音": "i",
  },
]
`;

exports[`toneType: CSToneNo 1`] = `
Array [
  Object {
    "调": 6,
    "释": "",
    "音": "y",
  },
]
`;

exports[`toneType: OctetToneNo 1`] = `
Array [
  Object {
    "调": 7,
    "释": "",
    "音": "y",
  },
]
`;

exports[`toneType: ToneLetter 1`] = `
Array [
  Object {
    "调": "˨˦",
    "释": "",
    "音": "y",
  },
]
`;

exports[`toneType: ToneName 1`] = `
Array [
  Object {
    "调": "入聲",
    "释": "",
    "音": "y",
  },
]
`;

exports[`toneType: ToneValue 1`] = `
Array [
  Object {
    "调": 24,
    "释": "",
    "音": "y",
  },
]
`;

exports[`toneType: XYZ 1`] = `
Array [
  Object {
    "调": 6,
    "释": "",
    "音": "y",
  },
]
`;
